# tilepad-plugin-vt-studio

./: Cargo.toml  Makefile.toml  README.md  cspell.json
.github/workflows/: build-and-bundle.yml
.tilepadPlugin/: manifest.json  manifest.toml
.tilepadPlugin/ui/: connect.html  style.css  switch-model.html  trigger-hotkey.html
src/: action.rs  main.rs  messages.rs  plugin.rs  state.rs
