[package]
name = "tilepad-plugin-vt-studio"
version = "0.1.0"
edition = "2024"

[dependencies]
parking_lot = "0.12.3"
tilepad-plugin-sdk = { version = "0.1.0", path = "../tilepad-sdk-rs" }
tokio = { version = "1.44.1", features = ["full"] }
vtubestudio = "0.9.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.97"
futures = "0.3.31"
