[package]
name = "tilepad-plugin-vt-studio"
version = "0.1.1"
edition = "2024"

[dependencies]
# Lock library
parking_lot = "0.12.3"

# Plugin SDK 
tilepad-plugin-sdk = "0.1.0"

# VTube studio socket library
vtubestudio = "0.9.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
