[package]
name = "tilepad-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
# Plugin SDK
tilepad-plugin-sdk = "0.4.0"

# VTube studio socket library
vtubestudio = "0.9.0"

# Async runtime
tokio = { version = "1", features = ["rt", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
